centering 3d tools on IE (fix #4600)

--- a/src/components/controls3d/style/controls3d.less
+++ b/src/components/controls3d/style/controls3d.less
@@ -7,7 +7,6 @@
   bottom: unit(@bt-bottom, px);
   margin-left: auto;
   margin-right: auto;
-  max-width: 250px;
   z-index: 600;
 
   @media (max-width: @screen-tablet), (max-height: @screen-s-height) {
